# 30-bot

./: .env.dist  LICENSE  README.md  README.rst  alembic.ini  pyproject.toml
dockerfiles/: bot  celery_scheduler  celery_worker
src/app/: __main__.py
src/app/bot/middlewares/: __init__.py  dao.py
src/app/bot/utils/: render_schedule.py
src/app/core/: config.py
src/app/core/dao/: __init__.py  convertio.py  database.py  schedule.py  user.py
src/app/core/dao/models/: user.py
src/app/core/database/: __init__.py  models.py
src/app/core/database/models/: __init__.py  day.py  lesson.py  user.py
src/app/core/dto/: __init__.py  database.py
src/app/services/: celery.py  tasks.py
src/migrations/: env.py
