[tool.poetry]
name = "30-bot"
version = "0.0.0"
description = ""
authors = [
    "Yarik <dsodx@pm.me>",
    "Ilya <phone.mas@yandex.ru>"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pml-30/30-bot"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.19"
alembic = "^1.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
