[tool.poetry]
name = "30-bot"
version = "0.0.0"
description = ""
authors = [
    "Yarik <dsodx@pm.me>",
    "Ilya <phone.mas@yandex.ru>"
]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/pml-30/30-bot"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.19"
alembic = "^1.11.2"
asyncpg = "^0.28.0"
aiogram = "3.0.0rc1"
pydantic = "^2.1.1"
pydantic-settings = "^2.0.3"
jinja2 = "^3.1.2"
celery = {extras = ["redis"], version = "^5.3.1"}


[tool.poetry.group.dev.dependencies]
eventlet = "^0.33.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
